# Neural-Networks-Projects

./: .dotenv  .env
exp1/: Neuron.ipynb  Perceptron.ipynb  utils.py
exp3/: Build_Neura_Network.ipynb  Dataset.ipynb  MLP_example.ipynb  Tensor.ipynb  Training.ipynb
neural network framework/: .gitignore  IMPROVEMENTS_SUMMARY.md  LICENSE  README.md  advanced_training_example.py  attention_experiment.py  autograd.py  checkpoint.py  cifar10.py  config.py  data.py  extracted_code.py  fashion_mnist.py  fashion_mnist_benchmark.py  fashion_mnist_model_params.npz  grad_utils.py  init.py  lmj_network.ipynb  logger.py  lr_scheduler.py  mnist_model_params.npz  nn.py  ops.py  optimizers.py  progress.py  pyproject.toml  pytest.ini  requirements.txt  tensor.py  test_mnist.py  trainer.py  transforms.py
neural network framework/.github/workflows/: ci.yml
neural network framework/tests/: test_activations.py  test_attention.py  test_core.py  test_error_handling.py  test_image_attention.py  test_regressions.py  test_training_pipeline.py  test_transformer.py  test_transforms.py  test_utils.py
